SST: Use ITS as the backend of SST
This patch updates the SST service to call ITS as its backend. Also
updates ITS to maintain a second filesystem context for SST, using the
external flash device instead of the internal one.

Change-Id: I83027aa859b369e6d7d8e085518e2b068e2f9eac
Co-authored-by: Jamie Fox <jamie.fox@arm.com>
Signed-off-by: Tudor Cretu <tudor.cretu@arm.com>
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/secure_fw/services/secure_storage/tfm_secure_storage.yaml
+++ b/secure_fw/services/secure_storage/tfm_secure_storage.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -11,7 +11,7 @@
   "type": "PSA-ROT",
   "priority": "NORMAL",
   "entry_point": "tfm_sst_req_mngr_init",
-  "stack_size": "0xA00",
+  "stack_size": "0x600",
   "secure_functions": [
     {
       "name": "TFM_SST_SET",
@@ -86,7 +86,11 @@
    }
   ],
   "dependencies": [
-    "TFM_CRYPTO"
+    "TFM_CRYPTO",
+    "TFM_ITS_SET",
+    "TFM_ITS_GET",
+    "TFM_ITS_GET_INFO",
+    "TFM_ITS_REMOVE"
   ],
   "linker_pattern": {
     "library_list": [
