Build: Introduce MCUBOOT_IMAGE_NUMBER switch
Add the MCUBOOT_IMAGE_NUMBER compile time switch to the build system to
be able to specify the number of separately updatable firmware images.
It can be set in the MCUBootConfig.cmake configuration file or include
this macro definition in the command line at build time.

Change-Id: Iefe26e2029ce68352ec2ed6c0d7b2b086e2afec0
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -289,7 +289,8 @@ function(set_up_app_build)
 
 	#Set BL2 specific settings.
 	if (BL2)
-		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "BL2")
+		#Add BL2 and MCUBOOT_IMAGE_NUMBER defines to linker to resolve symbols in region_defs.h and flash_layout.h
+		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "BL2" "MCUBOOT_IMAGE_NUMBER=${MCUBOOT_IMAGE_NUMBER}")
 	endif()
 
 	#We depend on the non secure tests. See if the library target is available.
