SST: Resizing the service stack
This patch reduces the TFM_SECURE_STACK allocated space from 6KB to 2.5KB.
At measured worst case scenario during execution the service does not exceed
2KB of stack utilisation.

Change-Id: I07c4d946723c1e11fcb64610723024df07abce85
Signed-off-by: Galanakis, Minos <minos.galanakis@arm.com>

--- a/secure_fw/services/secure_storage/tfm_secure_storage.yaml
+++ b/secure_fw/services/secure_storage/tfm_secure_storage.yaml
@@ -11,7 +11,7 @@
   "priority": "NORMAL",
   "id": "0x00000100",
   "entry_point": "tfm_sst_req_mngr_init",
-  "stack_size": "0x1800",
+  "stack_size": "0xA00",
   "heap_size": "0",
   "secure_functions": [
     {
