Core: Unify the naming and types for context
The stacked context is named as 'state context' in the datasheet, unify
this naming and adjust related thread members to the proper type.

Change-Id: Ic013156f44ce480d1674088166bbf7392bce72b2
Signed-off-by: Ken Liu <ken.liu@arm.com>

--- a/secure_fw/services/tfm_spm_db.inc.template
+++ b/secure_fw/services/tfm_spm_db.inc.template
@@ -206,8 +206,8 @@ struct spm_partition_desc_t partition_list [] =
         .sp_thrd = {
                 .pfn              = NULL,
                 .param            = NULL,
-                .sp_base          = NULL,
-                .sp_top           = NULL,
+                .sp_btm           = 0,
+                .sp_top           = 0,
                 .prior            = THRD_PRIOR_LOWEST,
                 .status           = THRD_STAT_INVALID,
                 .state_ctx        =
