Test: Add an option to select/deselect IRQ test cases
Some topologies and platforms don't support IRQ in TF-M yet. The
IRQ test should be temporarily skipped during test on those
topologies or platforms.
Add TFM_ENABLE_IRQ_TEST to select/deselect IRQ test cases.
Update the auto-generated files.

Change-Id: I6ce90fd15a8bc51bfd91741acd548bd471e43089
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -263,6 +263,12 @@ function(set_up_secure_fw_build)
 	endif()
 	embedded_set_target_link_includes(TARGET ${EXE_NAME} INCLUDES "${PLATFORM_LINK_INCLUDES}")
 
+	if (NOT DEFINED TFM_ENABLE_IRQ_TEST)
+		message(FATAL_ERROR "ERROR: Incomplete Configuration: TFM_ENABLE_IRQ_TEST is not defined.")
+	elseif (TFM_ENABLE_IRQ_TEST)
+		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_ENABLE_IRQ_TEST")
+	endif()
+
 	#Generate binary file from executable
 	compiler_generate_binary_output(${EXE_NAME})
 
