--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -114,7 +114,7 @@
       "manifest": "test/test_services/tfm_irq_test_service_1/tfm_irq_test_service_1.yaml",
       "tfm_extensions": true,
       "tfm_partition_ipc": true,
-      "conditional": "TFM_PARTITION_TEST_CORE",
+      "conditional": "TFM_ENABLE_IRQ_TEST",
       "version_major": 0,
       "version_minor": 1
     }
