--- a/secure_fw/services/tfm_service_list.inc.template
+++ b/secure_fw/services/tfm_service_list.inc.template
@@ -14,6 +14,47 @@
 #include "{{header}}"
 {% endfor %}
 
+const struct tfm_spm_service_db_t service_db[] =
+{
+{% for manifest in manifests %}
+    {% if manifest.attr.tfm_partition_ipc %}
+        {% if manifest.manifest.services %}
+            {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+            {% endif %}
+    /******** {{manifest.manifest.name}} ********/
+            {% for service in manifest.manifest.services %}
+    {{'{'}}
+        .name = "{{service.name}}",
+        .partition_id = {{manifest.manifest.name}}_ID,
+        .signal = {{service.signal}},
+        .sid = {{service.sid}},
+            {% if service.non_secure_clients is sameas true %}
+        .non_secure_client = true,
+            {% else %}
+        .non_secure_client = false,
+            {% endif %}
+            {% if service.minor_version %}
+        .minor_version = {{service.minor_version}},
+            {% else %}
+        .minor_version = 1,
+            {% endif %}
+            {% if service.minor_policy %}
+        .minor_policy = TFM_VERSION_POLICY_{{service.minor_policy}}
+            {% else %}
+        .minor_policy = TFM_VERSION_POLICY_STRICT
+            {% endif %}
+    {{'}'}},
+            {% endfor %}
+            {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+            {% endif %}
+        {% endif %}
+
+    {% endif %}
+{% endfor %}
+};
+
 /**************************************************************************/
 /** The service list */
 /**************************************************************************/
@@ -28,27 +69,7 @@ struct tfm_spm_service_t service[] =
     /******** {{manifest.manifest.name}} ********/
             {% for service in manifest.manifest.services %}
     {{'{'}}
-        .service_db = {
-            .name = "{{service.name}}",
-            .partition_id = {{manifest.manifest.name}}_ID,
-            .signal = {{service.signal}},
-            .sid = {{service.sid}},
-                {% if service.non_secure_clients is sameas true %}
-            .non_secure_client = true,
-                {% else %}
-            .non_secure_client = false,
-                {% endif %}
-                {% if service.minor_version %}
-            .minor_version = {{service.minor_version}},
-                {% else %}
-            .minor_version = 1,
-                {% endif %}
-                {% if service.minor_policy %}
-            .minor_policy = TFM_VERSION_POLICY_{{service.minor_policy}}
-                {% else %}
-            .minor_policy = TFM_VERSION_POLICY_STRICT
-                {% endif %}
-        },
+        .service_db = NULL,
         .partition = NULL,
         .handle_list = {0},
         .msg_queue = {0},
@@ -63,4 +84,5 @@ struct tfm_spm_service_t service[] =
     {% endif %}
 {% endfor %}
 };
+
 #endif /* __TFM_SERVICE_LIST_INC__ */
