Crypto: Add support for key APIs for HUK
Adds support for the psa_open_key and psa_close_key APIs only when the
key identifier corresponds to the HUK. Also makes it possible to derive
another key from the HUK by calling the PSA key derivation functions
with the HUK key handle as the input key.

Change-Id: I6992daaca76b87412b334a852383b2221a5181a9
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/secure_fw/services/crypto/tfm_crypto.yaml
+++ b/secure_fw/services/crypto/tfm_crypto.yaml
@@ -22,6 +22,20 @@
       "minor_policy": "STRICT"
     },
     {
+      "name": "TFM_CRYPTO_OPEN_KEY",
+      "signal": "TFM_CRYPTO_OPEN_KEY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "TFM_CRYPTO_CLOSE_KEY",
+      "signal": "TFM_CRYPTO_CLOSE_KEY",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
       "name": "TFM_CRYPTO_IMPORT_KEY",
       "signal": "TFM_CRYPTO_IMPORT_KEY",
       "non_secure_clients": true,
