Core: Only allow PRoT services to make reset request
Only allow reset requests that are coming from a PSA Root of Trust
secure service.

Also make test service, that is making an SPM requests to be PRoT

Change-Id: Id89a619db4e59f7460600351081a231dab3a366e
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/test/test_services/tfm_core_test/tfm_test_core.yaml
+++ b/test/test_services/tfm_core_test/tfm_test_core.yaml
@@ -7,7 +7,7 @@
 
 {
   "name": "TFM_SP_CORE_TEST",
-  "type": "APPLICATION-ROT",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000002",
   "entry_point": "core_test_init",
