Platform: Add a missing #endif in common scatter file
A #endif is missed in #if/#endif pair in common scatter file.
It may generate incorrect scatter file when the data areas layout
changes. Fix it.

Change-Id: I70d88243e785fb8247bf22f4b6fb2879fe38d089
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -242,6 +242,7 @@ LR_CODE S_CODE_START {
 #if defined (TFM_PSA_API)
     {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY 0 {
     }
+#endif
     {% endif %}
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
