Platform: Add an option to run code in SPE from RAM
Define new TFM_RAM_CODE SRAM region in gcc and clang linker
scripts for code with .ramfunc attribute. This region is
intended for privileged secure code running from SRAM.

Signed-off-by: Andrei Narkevitch <ainh@cypress.com>
Change-Id: I4ab72f878271f20d28dbdd1cbfb84ed814c16caf

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -75,6 +75,11 @@ SECTIONS
 #endif /* {{manifest.attr.conditional}} */
     {% endif %}
 {% endfor %}
+#if defined (S_RAM_CODE_START)
+        LONG (LOADADDR(.TFM_RAM_CODE))
+        LONG (ADDR(.TFM_RAM_CODE))
+        LONG (SIZEOF(.TFM_RAM_CODE))
+#endif
         __copy_table_end__ = .;
     } > FLASH
 
@@ -610,6 +615,14 @@ SECTIONS
 
     Image$$ER_TFM_DATA$$Base = ADDR(.TFM_DATA);
     Image$$ER_TFM_DATA$$Limit = ADDR(.TFM_DATA) + SIZEOF(.TFM_DATA) + SIZEOF(.TFM_BSS);
+
+#if defined (S_RAM_CODE_START)
+    /* Code executed from RAM */
+    .TFM_RAM_CODE S_RAM_CODE_START :
+    {
+        KEEP(*(.ramfunc))
+    } > RAM AT> FLASH
+#endif
 
 #ifndef TFM_MULTI_CORE_TOPOLOGY
     /*
