--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -298,6 +298,13 @@ LR_CODE S_CODE_START {
     TFM_PSA_RW_STACK_END +0 ALIGN 32 EMPTY 0x0 {
     }
 
+#if defined (S_RAM_CODE_START)
+    /* Executable code allocated in RAM */
+    TFM_RAM_CODE S_RAM_CODE_START {
+        * (.ramfunc)
+    }
+#endif
+
     /* This empty, zero long execution region is here to mark the limit address
      * of the last execution region that is allocated in SRAM.
      */
