Twincpu: Add NSPE PSA client call interface in multi-core topology
Add Non-secure PSA client call interface implementation in
multi-core topology.
Add multi-core specific lock/unlock to synchronize multi-core NS
PSA client call requests. Currently, only single NS PSA client call
request is supported.

Change-Id: I3317f3eafbf90a45cccf7459abb6b563800bad2e
Signed-off-by: David Hu <david.hu@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -107,7 +107,10 @@ endif()
 
 if (TFM_PSA_API)
 	if (DEFINED TFM_MULTI_CORE_TOPOLOGY AND TFM_MULTI_CORE_TOPOLOGY)
-		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_ns_mailbox.c")
+		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_ns_mailbox.c"
+			"${INTERFACE_DIR}/src/tfm_multi_core_api.c"
+			"${INTERFACE_DIR}/src/tfm_multi_core_psa_ns_api.c"
+			)
 	else()
 		list(APPEND NS_APP_SRC "${INTERFACE_DIR}/src/tfm_psa_ns_api.c")
 	endif()
