Platform: Adjust ARMCLANG linker script to support multi-core topology
Adjust the secure data layout in ARMLANG linker script to support
build in multi-core topology.
- Armv6-M/Armv7-M MPU requires MPU region base address to align
  with MPU region size. Multi-core platforms may have to use
  multiple MPU regions to cover a data section which doesn't
  satisfy the alignment. The interleaved unprivileged/privileged
  data sections layout will run out of Armv6-M/Armv7-M MPU regions.
  To save both MPU regions and memory resource, separate the
  unprivileged and privileged secure data sections and group them
  into unprivileged/privileged data area respectively.
  Thus, multi-core platforms can just cover a whole unprivileged
  data area and a whole privileged data area, with much fewer MPU
  regions cost.
- Put privileged data sections at the bottom of secure data area
  to align with GCC linker script layout.
- Move BL2 shared data section and Main Stack to privileged data
  area in multi-core topology.
- Move Process Stack to privileged data area in multi-core
  topology.

Change-Id: I7e30906ce85cf325dc0ebde6711893f1a2835795
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -119,24 +119,34 @@ LR_CODE S_CODE_START {
     TFM_APP_CODE_END +0 ALIGN 32 EMPTY 0x0 {
     }
 
+    /**** Base address of secure data area */
+    TFM_SECURE_DATA_START S_DATA_START {
+    }
+
+    /*
+     * MPU on Armv6-M/v7-M core in multi-core topology may require more strict
+     * alignment that MPU region base address must align with the MPU region
+     * size.
+     * As a result, in multi-core topology, to save memory resource and MPU
+     * regions, unprivileged data sections and privileged data sections are
+     * separated and gathered in unprivileged/privileged data area respectively.
+     * Keep BL2 shared data and MSP stack at the beginning of the secure data
+     * area in single Armv8-M topology, while move the two areas to the
+     * beginning of privileged data region in multi-core topology.
+     */
+#ifndef TFM_MULTI_CORE_TOPOLOGY
     /* Shared area between BL2 and runtime to exchange data */
-    TFM_SHARED_DATA S_DATA_START ALIGN 32 OVERLAY EMPTY BOOT_TFM_SHARED_DATA_SIZE {
+    TFM_SHARED_DATA +0 ALIGN 32 OVERLAY EMPTY BOOT_TFM_SHARED_DATA_SIZE {
     }
 
     /* MSP */
-    ARM_LIB_STACK_MSP S_DATA_START ALIGN 32 OVERLAY EMPTY S_MSP_STACK_SIZE {
+    ARM_LIB_STACK_MSP +0 ALIGN 32 OVERLAY EMPTY S_MSP_STACK_SIZE {
     }
 
-    /* PSP */
+    /* PSP is unprivileged in single-core topology */
     ARM_LIB_STACK +0 ALIGN 32 EMPTY S_PSP_STACK_SIZE {
     }
-
-    ARM_LIB_HEAP +0 ALIGN 8 EMPTY S_HEAP_SIZE {
-    }
-
-    ER_TFM_DATA +0 {
-        * (+RW +ZI)
-    }
+#endif
 
 #if !defined(TFM_PSA_API)
     TFM_SECURE_STACK +0 ALIGN 128 EMPTY 0x2000 {
@@ -151,58 +161,6 @@ LR_CODE S_CODE_START {
         dummy_device_id.o (+RW +ZI)
         platform_retarget_dev.o (+RW +ZI)
         device_definition.o (+RW +ZI)
-    }
-
-    /**** PSA RoT DATA start here */
-    /*
-     * This empty, zero long execution region is here to mark the start address
-     * of PSA RoT RW and Stack.
-     */
-    TFM_PSA_RW_STACK_START +0 ALIGN 32 EMPTY 0x0 {
-    }
-
-{% for manifest in manifests %}
-    {% if manifest.manifest.type == 'PSA-ROT' %}
-    {% if manifest.attr.conditional %}
-#ifdef {{manifest.attr.conditional}}
-    {% endif %}
-    {{manifest.manifest.name}}_DATA +0 ALIGN 32 {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
-        {{pattern}} (+RW +ZI)
-        {% endfor %}
-    {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
-        {{pattern}} (+RW +ZI)
-        {% endfor %}
-    {% endif %}
-        *({{manifest.manifest.name}}_ATTR_RW)
-        *({{manifest.manifest.name}}_ATTR_ZI)
-    }
-
-    {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API)
-    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
-    }
-#endif
-    {% else %}
-#if defined (TFM_PSA_API)
-    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY 0 {
-    }
-#endif
-    {% endif %}
-    {% if manifest.attr.conditional %}
-#endif /* {{manifest.attr.conditional}} */
-    {% endif %}
-
-    {% endif %}
-{% endfor %}
-    /*
-     * This empty, zero long execution region is here to mark the end address
-     * of PSA RoT RW and Stack.
-     */
-    TFM_PSA_RW_STACK_END +0 ALIGN 32 EMPTY 0x0 {
     }
 
     /**** APP RoT DATA start here */
@@ -257,6 +215,83 @@ LR_CODE S_CODE_START {
     TFM_APP_RW_STACK_END +0 ALIGN 32 EMPTY 0x0 {
     }
 
+#ifdef TFM_MULTI_CORE_TOPOLOGY
+    /*
+     * Move BL2 shared area and MSP stack to the beginning of privileged data
+     * area in multi-core topology.
+     */
+    /* Shared area between BL2 and runtime to exchange data */
+    TFM_SHARED_DATA +0 ALIGN 32 OVERLAY EMPTY BOOT_TFM_SHARED_DATA_SIZE {
+    }
+
+    /* MSP */
+    ARM_LIB_STACK_MSP +0 ALIGN 32 OVERLAY EMPTY S_MSP_STACK_SIZE {
+    }
+
+    /* PSP is privileged in multi-core topology */
+    ARM_LIB_STACK +0 ALIGN 32 EMPTY S_PSP_STACK_SIZE {
+    }
+#endif
+
+    ARM_LIB_HEAP +0 ALIGN 8 EMPTY S_HEAP_SIZE {
+    }
+
+    ER_TFM_DATA +0 {
+        * (+RW +ZI)
+    }
+
+    /**** PSA RoT DATA start here */
+    /*
+     * This empty, zero long execution region is here to mark the start address
+     * of PSA RoT RW and Stack.
+     */
+    TFM_PSA_RW_STACK_START +0 ALIGN 32 EMPTY 0x0 {
+    }
+
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'PSA-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    {{manifest.manifest.name}}_DATA +0 ALIGN 32 {
+    {% if manifest.manifest.linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+        {{pattern}} (+RW +ZI)
+        {% endfor %}
+    {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
+        *({{manifest.manifest.name}}_ATTR_ZI)
+    }
+
+    {% if manifest.attr.tfm_partition_ipc %}
+#if defined (TFM_PSA_API)
+    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY {{manifest.manifest.stack_size}} {
+    }
+#endif
+    {% else %}
+#if defined (TFM_PSA_API)
+    {{manifest.manifest.name}}_STACK +0 ALIGN 128 EMPTY 0 {
+    }
+#endif
+    {% endif %}
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
+
+    {% endif %}
+{% endfor %}
+    /*
+     * This empty, zero long execution region is here to mark the end address
+     * of PSA RoT RW and Stack.
+     */
+    TFM_PSA_RW_STACK_END +0 ALIGN 32 EMPTY 0x0 {
+    }
+
     /* This empty, zero long execution region is here to mark the limit address
      * of the last execution region that is allocated in SRAM.
      */
@@ -269,7 +304,7 @@ LR_CODE S_CODE_START {
     ScatterAssert(ImageLimit(SRAM_WATERMARK) <= S_DATA_START + S_DATA_SIZE)
 }
 
-#if !TFM_MULTI_CORE_TOPOLOGY
+#ifndef TFM_MULTI_CORE_TOPOLOGY
 LR_VENEER CMSE_VENEER_REGION_START {
     /*
      * Place the CMSE Veneers (containing the SG instruction) in a separate
