Platform: Specify the starting address of privileged secure data area
In multi-core topology, Armv6-M/Armv7-M MPU requires a MPU region
base address to align with its size. Specify the starting address
of privileged secure data area when the multi-core platform defines
the S_DATA_PRIV_START. It can make MPU configuration more easier to
satisfy Armv6-M/Armv7-M MPU alignment on multi-core platforms.

Change-Id: I57904b772b352b1bbd1b4b9015093da258358e00
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -216,6 +216,12 @@ LR_CODE S_CODE_START {
     }
 
 #ifdef TFM_MULTI_CORE_TOPOLOGY
+#ifdef S_DATA_PRIV_START
+    /**** Privileged data area base address specified by multi-core platform */
+    TFM_SECURE_PRIV_DATA_BOUNDARY S_DATA_PRIV_START {
+    }
+#endif
+
     /*
      * Move BL2 shared area and MSP stack to the beginning of privileged data
      * area in multi-core topology.
