Platform: Adjust GNUARM linker script to support multi-core topology
Adjust the secure data layout in GNUARM linker script to support
build in multi-core topology.
- Armv6-M/Armv7-M MPU requires MPU region base address to align
  with MPU region size. Multi-core platforms may have to use
  multiple MPU regions to cover a data section which doesn't
  satisfy the alignment. The interleaved unprivileged/privileged
  data sections layout will run out of Armv6-M/Armv7-M MPU regions.
  To save both MPU regions and memory resource, separate the
  unprivileged and privileged secure data sections and group them
  into unprivileged/privileged data area respectively.
  Thus multi-core platform can just cover a whole unprivileged data
  area and a whole privileged data area, with much fewer MPU regions
  cost.
- Put privileged data sections at the bottom of secure data area to
  make sure TFM_DATA and TFM_BSS sections are at the end.
  Otherwise, the two sections will collect data/bss from other
  sections.
- Move BL2 shared data section and Main Stack to privileged data
  area in multi-core topology.
- Move Process Stack to privileged data area in multi-core
  topology.

Change-Id: I544769542e5e65ca90b8bfb1af81f59e536fd006
Signed-off-by: David Hu <david.hu@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -28,7 +28,7 @@ MEMORY
 {
   FLASH   (rx)  : ORIGIN = S_CODE_START, LENGTH = S_CODE_SIZE
   RAM     (rwx) : ORIGIN = S_DATA_START, LENGTH = S_DATA_SIZE
-#if !TFM_MULTI_CORE_TOPOLOGY
+#ifndef TFM_MULTI_CORE_TOPOLOGY
   VENEERS (rx)  : ORIGIN = CMSE_VENEER_REGION_START, LENGTH = CMSE_VENEER_REGION_SIZE
 #endif
 }
@@ -248,6 +248,24 @@ SECTIONS
         KEEP(*(.eh_frame*))
     } > FLASH
 
+    /**** Base address of secure data area */
+    .tfm_secure_data_start :
+    {
+        . = ABSOLUTE(S_DATA_START) ;
+    } > RAM
+
+    /*
+     * MPU on Armv6-M/v7-M core in multi-core topology may require more strict
+     * alignment that MPU region base address must align with the MPU region
+     * size.
+     * As a result, in multi-core topology, to save memory resource and MPU
+     * regions, unprivileged data sections and privileged data sections are
+     * separated and gathered in unprivileged/privileged data area respectively.
+     * Keep BL2 shared data and MSP stack at the beginning of the secure data
+     * area in single Armv8-M topology, while move the two areas to the
+     * beginning of privileged data region in multi-core topology.
+     */
+#ifndef TFM_MULTI_CORE_TOPOLOGY
     /* shared_data and msp_stack are overlapping on purpose when
      * msp_stack is extended until the beginning of RAM, when shared_date
      * was read out by partitions
@@ -264,12 +282,14 @@ SECTIONS
     Image$$ARM_LIB_STACK_MSP$$ZI$$Base = ADDR(.msp_stack);
     Image$$ARM_LIB_STACK_MSP$$ZI$$Limit = ADDR(.msp_stack) + SIZEOF(.msp_stack);
 
+    /* PSP is unprivileged in single-core topology */
     .psp_stack : ALIGN(32)
     {
         . += __psp_stack_size__;
     } > RAM
     Image$$ARM_LIB_STACK$$ZI$$Base = ADDR(.psp_stack);
     Image$$ARM_LIB_STACK$$ZI$$Limit = ADDR(.psp_stack) + SIZEOF(.psp_stack);
+#endif
 
 #if TFM_LVL == 1
 
@@ -327,74 +347,6 @@ SECTIONS
     Image$$TFM_UNPRIV_DATA$$ZI$$Base = ADDR(.TFM_UNPRIV_BSS);
     Image$$TFM_UNPRIV_DATA$$ZI$$Limit = ADDR(.TFM_UNPRIV_BSS) + SIZEOF(.TFM_UNPRIV_BSS);
 #endif /* TFM_LVL == 1 */
-
-    /**** PSA RoT DATA start here */
-    Image$$TFM_PSA_RW_STACK_START$$Base = .;
-
-{% for manifest in manifests %}
-    {% if manifest.manifest.type == 'PSA-ROT' %}
-    {% if manifest.attr.conditional %}
-#ifdef {{manifest.attr.conditional}}
-    {% endif %}
-    .{{manifest.manifest.name}}_DATA : ALIGN(32)
-    {
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
-        {{pattern}}:*(.data*)
-        {% endfor %}
-    {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
-        {{pattern}}(.data*)
-        {% endfor %}
-    {% endif %}
-        *({{manifest.manifest.name}}_ATTR_RW)
-        . = ALIGN(32);
-    } > RAM AT> FLASH
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
-    Image$${{manifest.manifest.name}}_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_DATA) + SIZEOF(.{{manifest.manifest.name}}_DATA);
-
-    .{{manifest.manifest.name}}_BSS : ALIGN(32)
-    {
-        start_of_{{manifest.manifest.name}} = .;
-    {% if manifest.manifest.linker_pattern.library_list %}
-        {% for pattern in manifest.manifest.linker_pattern.library_list %}
-        {{pattern}}:*(.bss*)
-        {{pattern}}:*(COMMON)
-        {% endfor %}
-    {% endif %}
-    {% if manifest.manifest.linker_pattern.object_list %}
-        {% for pattern in manifest.manifest.linker_pattern.object_list %}
-        {{pattern}}(.bss*)
-        {{pattern}}(COMMON)
-        {% endfor %}
-    {% endif %}
-        *({{manifest.manifest.name}}_ATTR_ZI)
-        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
-        . = ALIGN(32);
-    } > RAM AT> RAM
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
-    Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
-
-    {% if manifest.attr.tfm_partition_ipc %}
-#if defined (TFM_PSA_API)
-    .{{manifest.manifest.name}}_STACK : ALIGN(128)
-    {
-        . += {{manifest.manifest.stack_size}};
-    } > RAM
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
-    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
-#endif
-    {% endif %}
-
-    {% if manifest.attr.conditional %}
-#endif /* {{manifest.attr.conditional}} */
-    {% endif %}
-
-    {% endif %}
-{% endfor %}
-    /**** PSA RoT DATA end here */
-    Image$$TFM_PSA_RW_STACK_END$$Base = .;
 
     /**** APPLICATION RoT DATA start here */
     Image$$TFM_APP_RW_STACK_START$$Base = .;
@@ -507,6 +459,105 @@ SECTIONS
 #endif /* TFM_PARTITION_TEST_SECURE_SERVICES */
 #endif /* TFM_LVL != 1 */
 
+#ifdef TFM_MULTI_CORE_TOPOLOGY
+    /*
+     * Move BL2 shared area and MSP stack to the beginning of privileged data
+     * area in multi-core topology.
+     */
+
+    /* shared_data and msp_stack are overlapping on purpose when
+     * msp_stack is extended until the beginning of RAM, when shared_date
+     * was read out by partitions
+     */
+    .tfm_bl2_shared_data : ALIGN(32)
+    {
+        . += BOOT_TFM_SHARED_DATA_SIZE;
+    } > RAM AT> RAM
+
+    .msp_stack : ALIGN(32)
+    {
+        . += __msp_init_stack_size__;
+    } > RAM
+    Image$$ARM_LIB_STACK_MSP$$ZI$$Base = ADDR(.msp_stack);
+    Image$$ARM_LIB_STACK_MSP$$ZI$$Limit = ADDR(.msp_stack) + SIZEOF(.msp_stack);
+
+    /* PSP is privileged in multi-core topology */
+    .psp_stack : ALIGN(32)
+    {
+        . += __psp_stack_size__;
+    } > RAM
+    Image$$ARM_LIB_STACK$$ZI$$Base = ADDR(.psp_stack);
+    Image$$ARM_LIB_STACK$$ZI$$Limit = ADDR(.psp_stack) + SIZEOF(.psp_stack);
+#endif
+
+    /**** PSA RoT DATA start here */
+    Image$$TFM_PSA_RW_STACK_START$$Base = .;
+
+{% for manifest in manifests %}
+    {% if manifest.manifest.type == 'PSA-ROT' %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+    .{{manifest.manifest.name}}_DATA : ALIGN(32)
+    {
+    {% if manifest.manifest.linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+        {{pattern}}:*(.data*)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+        {{pattern}}(.data*)
+        {% endfor %}
+    {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
+        . = ALIGN(32);
+    } > RAM AT> FLASH
+    Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
+    Image$${{manifest.manifest.name}}_DATA$$RW$$Limit = ADDR(.{{manifest.manifest.name}}_DATA) + SIZEOF(.{{manifest.manifest.name}}_DATA);
+
+    .{{manifest.manifest.name}}_BSS : ALIGN(32)
+    {
+        start_of_{{manifest.manifest.name}} = .;
+    {% if manifest.manifest.linker_pattern.library_list %}
+        {% for pattern in manifest.manifest.linker_pattern.library_list %}
+        {{pattern}}:*(.bss*)
+        {{pattern}}:*(COMMON)
+        {% endfor %}
+    {% endif %}
+    {% if manifest.manifest.linker_pattern.object_list %}
+        {% for pattern in manifest.manifest.linker_pattern.object_list %}
+        {{pattern}}(.bss*)
+        {{pattern}}(COMMON)
+        {% endfor %}
+    {% endif %}
+        *({{manifest.manifest.name}}_ATTR_ZI)
+        . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
+        . = ALIGN(32);
+    } > RAM AT> RAM
+    Image$${{manifest.manifest.name}}_DATA$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_BSS);
+    Image$${{manifest.manifest.name}}_DATA$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_BSS) + SIZEOF(.{{manifest.manifest.name}}_BSS);
+
+    {% if manifest.attr.tfm_partition_ipc %}
+#if defined (TFM_PSA_API)
+    .{{manifest.manifest.name}}_STACK : ALIGN(128)
+    {
+        . += {{manifest.manifest.stack_size}};
+    } > RAM
+    Image$${{manifest.manifest.name}}_STACK$$ZI$$Base = ADDR(.{{manifest.manifest.name}}_STACK);
+    Image$${{manifest.manifest.name}}_STACK$$ZI$$Limit = ADDR(.{{manifest.manifest.name}}_STACK) + SIZEOF(.{{manifest.manifest.name}}_STACK);
+#endif
+    {% endif %}
+
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
+
+    {% endif %}
+{% endfor %}
+    /**** PSA RoT DATA end here */
+    Image$$TFM_PSA_RW_STACK_END$$Base = .;
+
     .TFM_DATA : ALIGN(4)
     {
         *(.data*)
@@ -552,7 +603,7 @@ SECTIONS
     Image$$ER_TFM_DATA$$Base = ADDR(.TFM_DATA);
     Image$$ER_TFM_DATA$$Limit = ADDR(.TFM_DATA) + SIZEOF(.TFM_DATA) + SIZEOF(.TFM_BSS);
 
-#if !TFM_MULTI_CORE_TOPOLOGY
+#ifndef TFM_MULTI_CORE_TOPOLOGY
     /*
      * Place the CMSE Veneers (containing the SG instruction) after the code, in a
      * separate 32 bytes aligned region so that the SAU can programmed to just set
