--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -236,6 +236,9 @@ function(set_up_app_build)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/val/val_nspe.a")
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/platform/pal_nspe.a")
 	endif()
+	if(PSA_API_TEST_NS AND PSA_API_TEST_INTERNAL_TRUSTED_STORAGE)
+		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/internal_trusted_storage/test_combine.a")
+	endif()
 	if(PSA_API_TEST_NS AND PSA_API_TEST_SECURE_STORAGE)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/protected_storage/test_combine.a")
 	endif()
